# PILOT-Dub

./: .gitignore  AGENTS.md  README.md  STRONG_TRAINING_WORKFLOW.md  pyproject.toml
artifacts/PILOT-Dub/: MANIFEST.md
artifacts/vocab/: phn2num.txt
configs/: v19_real_time_acoustic_interface_formal.yaml  v19_strong_real_time_acoustic_interface_formal.yaml
configs/callbacks/: default.yaml
reports/: 144.v15_1a_diagnostics_and_v15_2a_decode_bias_pilot.md  145.v14_6b_candidate_oracle_mini20_report.md  146.v14_6b_candidate_oracle_mini50_report.md  147.avsync_scorer_pilot_failure_report.md  148.rerank2_wavlm_avsync_scorer_note_style_report.md  149.current_rerank2_full_pipeline_and_batch_dataflow.md  150.v14_5_clean_base_detailed_note.md  151.pilot_dub_integrated_generator_reranker_note.md  152.wavlm_avsync_score_computation_explanation.md  153.pilot_dub_project_migration_summary.md  154.strong_threshold_sweep.json  154.strong_threshold_sweep.md  155.strong_threshold_followup_summary.md  156.final_auto_review_conclusion.md  157.pilot_dub_v19_final_migration.md  pilotdub-strong-rerank-full-m02_selection.json
scripts/: analyze_candidate_oracle.py  build_lrs3_dataset.sh  build_mini_eval_sets.py  evaluate_npy.py  inference.py  loop_train.sh  run_candidate_metrics_mini.sh  run_lrs3_metrics.sh  run_lrs3_metrics_mini.sh  run_pilot_dub_lrs3_rerank.sh  run_pilot_dub_v19_strong_bootstrap.sh  run_pilot_dub_v19_strong_resume.sh  run_wavlm_avsync_scorer_bootstrap.sh  run_wavlm_avsync_scorer_resume.sh  select_candidates_with_avsync_scorer.py  sweep_selection_thresholds.py  train.py  train_wavlm_avsync_scorer.py  watch_pilot_dub_full_results.sh  watch_pilot_dub_threshold_sweep.sh
(+89 files in other folders)
